fixed z-index issues

--- a/public/style.css
+++ b/public/style.css
@@ -31,7 +31,6 @@
 
 }
 #Ratings {
-  z-index: -1;
   grid-row-start: 2;
   grid-row-end: 3;
   grid-column-start: 1;
